2007-03-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: added makedistcheck variable, which was
	forgotten (closes: #414377)
	 
2007-03-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modulesets/gnome-2.18.modules: added hacky autogenargs to
	opal so it finds pwlib.

2007-03-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/modtypes/autotools.py,
	jhbuild/defaults.jhbuildrc: added support for make distcheck
	(config/makedistcheck) and added command-line parameters to
	activate make dist (-d) and make distcheck (--distcheck), for build
	and buildone commands. (closes: #407503)

2007-03-02  Mariano Suárez-Alvarez  <mariano@gnome.org>

	* modulesets/gnome-2.18.modules: build the correct tag of ekiga.

2007-03-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: added gnome-panel as a dep for
	gnome-control-center and gnome-power-manager (they both require
	libpanelapplet-2.0).

2007-03-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/__init__.py, jhbuild/commands/base.py,
	jhbuild/frontends/buildscript.py, jhbuild/main.py: let commands.run
	return a value that will be used as exit code.  Updated buildscript
	to return 1 if there are any failures.

2007-02-28  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py, jhbuild/config.py,
	jhbuild/defaults.jhbuildrc: support for running make dist, after make,
	before make install, disabled by default.

2007-02-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.18.modules: bumped cairo to 1.3.14

2007-02-27  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: metacity has branched for gnome-2-18.

2007-02-24  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: gnome-system-monitor no longer depends
	on libgnomeui, but depends on gnome-vfs and gconf. (closes: #365201)

2007-02-20  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.18.modules: Added gimmie.
