@@ -220,24 +220,17 @@ os.environ['INSTALL'] = os.path.join(os.environ['HOME'],
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><varname>cvsroots</varname></term>
+	  <term><varname>repos</varname></term>
 	  <listitem>
-	    <simpara>By default, JHBuild will check out code from CVS
-	    using an anonymous CVS root.  This dictionary is used to
-	    tell JHBuild to use an alternative CVS root for a
+	    <simpara>By default, JHBuild will check out code from repositories
+	    using an anonymous repository location.  This dictionary is used to
+	    tell JHBuild to use an alternative repository location for a
 	    particular repository (a developer would probably want to
 	    do this).  This variable is a dictionary where the keys
 	    are short repository names (for example, <systemitem
-	    class="systemname">gnome.org</systemitem> is used for the
-	    GNOME CVS repository), and the values are the alternative
-	    CVS root strings.</simpara>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term><varname>svnroots</varname></term>
-	  <listitem>
-	    <simpara>Similar to <varname>cvsroots</varname> but for
-	    Subversion repositories.</simpara>
+	    class="systemname">svn.gnome.org</systemitem> is used for the
+	    GNOME SVN repository), and the values are the alternative
+	    repository location strings.</simpara>
 	  </listitem>
 	</varlistentry>
       </variablelist>
