@@ -1,3 +1,9 @@
+2007-03-04  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* doc/jhbuild.xml:
+	  Update documentation to note that a) we use repos now to override
+	  checkout locations and b) GNOME uses SVN
+
 2007-03-04  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/config.py: added makedistcheck variable, which was
